--- a/menu.html
+++ b/menu.html
@@ -13,8 +13,8 @@
   <div class="container nav">
      <div class="row">
        <div class="col-sm-4 left-nav">
-        <h2> <div id="nav"> <a href="index.html">Welcome</a> <a href="about.html">About</a> <a href="menu.html">Menu</a></div> </h2>
-       </div>
+        <h2> <div id="nav"> <a href="index.html">Welcome</a> <a href="about.html">About</a> <a href="menu.html">Menu</a></div></h2>
+      </div>
        <div class="col-sm-4 center-nav">
          <h1>Just Pan</h1>
        </div>
@@ -23,14 +23,4 @@
         </div>
      </div>
     </div>
-
-    <div class="container title">
-        <h1>Just Pan</h1>
-        <h2>Where all we do is Pan Pizza</h2>
-    </div>
-
-    <div class="container picture">
-        <img src="images/pan.jpg" width="500px" height="500px" alt="pan-pizza"/>
-    </div>
-
-  </body>
+<h3> Menu</h3>
