--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <h1>Just Pan</h1>
        </div>
        <div class="col-sm-4 right-nav">
-         <h3>Daily Specials   Order Now</h3>
+         <h2>Daily Specials   Order Now</h2>
         </div>
      </div>
     </div>
@@ -34,3 +34,17 @@
     </div>
 
   </body>
+  <footer>
+    <div class ="container footer">
+      <div class="row">
+        <div class="col-sm-4 footer-text">
+          <h6> Location</h6>
+        </div>
+        <div class="col-sm-4 footer-text">
+          <h6> Phone Number</h6>
+        </div>
+        <div class="col-sm-4 footer-text">
+          <h6> Hours</h6>
+        </div>
+</footer>
+</html>
