--- a/menu.html
+++ b/menu.html
@@ -19,8 +19,74 @@
          <h1>Just Pan</h1>
        </div>
        <div class="col-sm-4 right-nav">
-         <h3>Daily Specials   Order Now</h3>
+         <h2>Daily Specials   Order Now</h2>
         </div>
      </div>
     </div>
 <h3> Menu</h3>
+
+  <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h4>Pizza One</h4>
+          <p> Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+        </div>
+        <div class="col-sm-6">
+          <h4>Pizza Two</h4>
+          <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+        </div>
+
+        <div class="col-sm-6">
+          <h4> Pizza Three </h4>
+          <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+
+      <div class="col-sm-6">
+        <h4> Pizza Four </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+
+      <div class="col-sm-6">
+        <h4> Pizza Five </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+
+      <div class="col-sm-6">
+        <h4> Pizza Six </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+      <div class="col-sm-6">
+        <h4> Pizza Seven </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+      <div class="col-sm-6">
+        <h4> Pizza Eight </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+      <div class="col-sm-6">
+        <h4> Pizza Nine </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+      <div class="col-sm-6">
+        <h4> Pizza Ten </h4>
+        <p>Nunc ultrices, sapien non pretium blandit, arcu lacus sollicitudin dolor</p>
+      </div>
+
+    </div>
+  </body>
+</body>
+
+<footer>
+  <div class ="container footer">
+    <div class="row">
+      <div class="col-sm-4 footer-text">
+        <h6> Location</h6>
+      </div>
+      <div class="col-sm-4 footer-text">
+        <h6> Phone Number</h6>
+      </div>
+      <div class="col-sm-4 footer-text">
+        <h6> Hours</h6>
+      </div>
+</footer>
+</html>
