--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
          <h1>Just Pan</h1>
        </div>
        <div class="col-sm-4">
-         <h3>Daily Specials   Order Now</h3>
+         <h2>Daily Specials   Order Now</h2>
         </div>
      </div>
     </div>
@@ -38,3 +38,18 @@
         <span class="starting-text">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Donec efficitur pretium dui in rutrum. In et porta velit. Phasellus vel justo in justo semper sagittis. Integer ac pellentesque magna. Quisque sodales sapien ut neque porttitor finibus. Morbi rhoncus lacus vel nunc elementum tempor. Duis quam nisl, ullamcorper et ante et, sagittis porttitor mauris. Fusce sollicitudin arcu est, vel maximus ex congue ut. Morbi in convallis neque. Fusce pellentesque pharetra erat, quis placerat nulla convallis sit amet.
       </div>
     </body>
+  </body>
+  <footer>
+    <div class ="container footer-about">
+      <div class="row">
+        <div class="col-sm-4 footer-text">
+          <h6> Location</h6>
+        </div>
+        <div class="col-sm-4 footer-text">
+          <h6> Phone Number</h6>
+        </div>
+        <div class="col-sm-4 footer-text">
+          <h6> Hours</h6>
+        </div>
+</footer>
+</html>
