--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>
-    Boostrap Demo
+    Just Pan
   </title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -35,9 +35,11 @@
       </div>
 
       <div class="box-two">
-        <span class="starting-text">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Donec efficitur pretium dui in rutrum. In et porta velit. Phasellus vel justo in justo semper sagittis. Integer ac pellentesque magna. Quisque sodales sapien ut neque porttitor finibus. Morbi rhoncus lacus vel nunc elementum tempor. Duis quam nisl, ullamcorper et ante et, sagittis porttitor mauris. Fusce sollicitudin arcu est, vel maximus ex congue ut. Morbi in convallis neque. Fusce pellentesque pharetra erat, quis placerat nulla convallis sit amet.
+        <p> <span class="starting-text">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Donec efficitur pretium dui in rutrum. In et porta velit. Phasellus vel justo in justo semper sagittis. Integer ac pellentesque magna. Quisque sodales sapien ut neque porttitor finibus. Morbi rhoncus lacus vel nunc elementum tempor. Duis quam nisl, ullamcorper et ante et, sagittis porttitor mauris. Fusce sollicitudin arcu est, vel maximus ex congue ut. Morbi in convallis neque. Fusce pellentesque pharetra erat, quis placerat nulla convallis sit amet.</p>
+      <p> <span class="starting-text">Lorem ipsum</span> dolor sit amet, consectetur adipiscing elit. Donec efficitur pretium dui in rutrum. In et porta velit. Phasellus vel justo in justo semper sagittis. Integer ac pellentesque magna. Quisque sodales sapien ut neque porttitor finibus. Morbi rhoncus lacus vel nunc elementum tempor. Duis quam nisl, ullamcorper et ante et, sagittis porttitor mauris. Fusce sollicitudin arcu est, vel maximus ex congue ut. Morbi in convallis neque. Fusce pellentesque pharetra erat, quis placerat nulla convallis sit amet.</p>
       </div>
     </body>
+
   </body>
   <footer>
     <div class ="container footer-about">
